minor update: use truncated href for cleaner url

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <div class="header">
         <div class="container">
-                <div class="logo"><a href="index.html" style="color: #2c3e50; text-decoration: none;">Web Designing Agency</a></div>
+                <div class="logo"><a href="index" style="color: #2c3e50; text-decoration: none;">Web Designing Agency</a></div>
             <div class="nav">
-                <a href="index.html" class="nav-link active">Home</a>
-                <a href="services.html" class="nav-link">Services</a>
-                <a href="portfolio.html" class="nav-link">Portfolio</a>
-                <a href="testimonials.html" class="nav-link">Testimonials</a>
-                <a href="faq.html" class="nav-link">FAQ</a>
-                <a href="contact.html" class="nav-link">Contact</a>
+                <a href="index" class="nav-link active">Home</a>
+                <a href="services" class="nav-link">Services</a>
+                <a href="portfolio" class="nav-link">Portfolio</a>
+                <a href="testimonials" class="nav-link">Testimonials</a>
+                <a href="faq" class="nav-link">FAQ</a>
+                <a href="contact" class="nav-link">Contact</a>
             </div>
         </div>
     </div>
@@ -37,9 +37,9 @@
     <div class="footer">
         <div class="container">
             <div class="footer-links">
-                <a href="privacy.html">Privacy Policy</a> | 
-                <a href="terms.html">Terms of Service</a> | 
-                <a href="contact.html">Contact Us</a>
+                <a href="privacy">Privacy Policy</a> | 
+                <a href="terms">Terms of Service</a> | 
+                <a href="contact">Contact Us</a>
             </div>
             <p>© 2025 Web Designing Agency. All Rights Reserved.</p>
         </div>
