used static year and other misc changes

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <div class="container">
                 <div class="logo"><a href="index" style="color: #2c3e50; text-decoration: none;">Web Designing Agency</a></div>
             <div class="nav">
-                <a href="index" class="nav-link active">Home</a>
-                <a href="services" class="nav-link">Services</a>
-                <a href="portfolio" class="nav-link">Portfolio</a>
-                <a href="testimonials" class="nav-link">Testimonials</a>
-                <a href="faq" class="nav-link">FAQ</a>
-                <a href="contact" class="nav-link">Contact</a>
+                <a href="index.html" class="nav-link active">Home</a>
+                <a href="services.html" class="nav-link">Services</a>
+                <a href="portfolio.html" class="nav-link">Portfolio</a>
+                <a href="testimonials.html" class="nav-link">Testimonials</a>
+                <a href="faq.html" class="nav-link">FAQ</a>
+                <a href="contact.html" class="nav-link">Contact</a>
             </div>
         </div>
     </div>
@@ -28,8 +28,8 @@
             <p class="main-description">Expert web development, smart automation, and AI solutions that drive real results</p>
 
             <div class="button-group">
-                <a href="#start" class="btn btn-primary">Start Your Project →</a>
-                <a href="#talk" class="btn btn-secondary">📞 Let's Talk Tech</a>
+                <a href="services.html" class="btn btn-primary">Start Your Project →</a>
+                <a href="contact.html" class="btn btn-secondary">📞 Let's Talk Tech</a>
             </div>
         </div>
     </div>
