--- a/services.html
+++ b/services.html
@@ -188,7 +188,7 @@
                 <a href="terms.html">Terms of Service</a> | 
                 <a href="contact.html">Contact Us</a>
             </div>
-            <p>© 2025s Web Designing Agency. All Rights Reserved.</p>
+            <p>© 2025 Web Designing Agency. All Rights Reserved.</p>
         </div>
     </div>
 </body>
