--- a/portfolio.html
+++ b/portfolio.html
@@ -193,13 +193,8 @@
                 <a href="terms.html">Terms of Service</a> | 
                 <a href="contact.html">Contact Us</a>
             </div>
-            <p>© <span id="year"></span> Web Designing Agency. All Rights Reserved.</p>
+            <p>© 2025 Web Designing Agency. All Rights Reserved.</p>
         </div>
     </div>
-
-    <script>
-        // Set footer year only
-        document.getElementById('year').innerHTML = new Date().getFullYear();
-    </script>
 </body>
 </html>
