--- a/testimonials.html
+++ b/testimonials.html
@@ -176,12 +176,8 @@
                 <a href="terms.html">Terms of Service</a> | 
                 <a href="contact.html">Contact Us</a>
             </div>
-            <p>© <span id="year"></span> Web Designing Agency. All Rights Reserved.</p>
+            <p>© 2025 Web Designing Agency. All Rights Reserved.</p>
         </div>
     </div>
-
-    <script>
-        document.getElementById('year').innerHTML = new Date().getFullYear();
-    </script>
 </body>
 </html>
