added images to the portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,8 @@
             <div class="portfolio-grid">
                 <!-- Project 1 -->
                 <div class="portfolio-item">
-                    <div class="portfolio-image" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
+                    <div class="portfolio-image">
+                        <img src="https://imgs.search.brave.com/kOxWuwxy6W28j3UnLfcSrlXxGgUP0rCGStwL5D4smcw/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9lYW9n/Mm5rcWNrcC5leGFj/dGRuLmNvbS93cC1j/b250ZW50L3VwbG9h/ZHMvMjAyNC8wMS9i/aWctY2FydGVsLTEw/MjR4NDgwLndlYnA_/c3RyaXA9YWxsJmxv/c3N5PTEmc3NsPTE" alt="" srcset="">
                         <div class="portfolio-overlay">
                             <h3>E-Commerce Platform</h3>
                             <p>Full-Stack Development</p>
@@ -52,7 +53,8 @@
 
                 <!-- Project 2 -->
                 <div class="portfolio-item">
-                    <div class="portfolio-image" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);">
+                    <div class="portfolio-image">
+                        <img src="https://imgs.search.brave.com/2CwekQmEf8P27S1Pb6Vjli_APpZbSYGRdkaGB6FPwIE/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly93d3cu/dG91Y2hiaXN0cm8u/Y29tL3dwLWNvbnRl/bnQvdXBsb2Fkcy8y/MDIxLzA0L2Jlc3Qt/cmVzdGF1cmFudC13/ZWJzaXRlcy1pbnNl/dC00MC5qcGc" alt="" srcset="">
                         <div class="portfolio-overlay">
                             <h3>Restaurant Website</h3>
                             <p>Menu & Reservations</p>
@@ -72,7 +74,8 @@
 
                 <!-- Project 3 -->
                 <div class="portfolio-item">
-                    <div class="portfolio-image" style="background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);">
+                    <div class="portfolio-image">
+                        <img src="https://imgs.search.brave.com/jPYL7VJU-rH6otK2CKlHTcTwxyI2i2G6pWjnJ3fDwJ8/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9jb2xv/cmxpYi5jb20vd3Av/d3AtY29udGVudC91/cGxvYWRzL3NpdGVz/LzIvZW5naXRlY2gt/Ym9vdHN0cmFwLWJ1/c2luZXNzLXdlYnNp/dGUtdGVtcGxhdGUu/anBn" alt="" srcset="">
                         <div class="portfolio-overlay">
                             <h3>Corporate Portal</h3>
                             <p>Intranet Solution</p>
@@ -93,7 +96,8 @@
 
                 <!-- Project 4 -->
                 <div class="portfolio-item">
-                    <div class="portfolio-image" style="background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%);">
+                    <div class="portfolio-image">
+                        <img src="https://imgs.search.brave.com/0WHItZYDiBs8imorhmHo0cQS_LFQ-psq7jWaHBQT29M/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly93d3cu/ZnJhbWVyLmNvbS9j/cmVhdG9ycy1hc3Nl/dHMvX25leHQvaW1h/Z2UvP3VybD1odHRw/czovL3k0cGRnbmVw/Z3N3cWZmcHQucHVi/bGljLmJsb2IudmVy/Y2VsLXN0b3JhZ2Uu/Y29tL3RlbXBsYXRl/cy80NTUzOC9XdXJS/MXlIMEdURVZCMjJm/OFFwODdwY2xKQ3ct/M0ZnSXpnMERBYUNO/dmdMOWdYMDJPV2JZ/NjFVQ2F3LmpwZyZ3/PTM4NDAmcT0xMDA">
                         <div class="portfolio-overlay">
                             <h3>Learning Platform</h3>
                             <p>Video Lessons</p>
@@ -114,7 +118,8 @@
 
                 <!-- Project 5 -->
                 <div class="portfolio-item">
-                    <div class="portfolio-image" style="background: linear-gradient(135deg, #fa709a 0%, #fee140 100%);">
+                    <div class="portfolio-image">
+                        <img src="https://imgs.search.brave.com/eRdVgd7G-AnCcKI9PtrVPmqyCeZ5_UxYYSjg6R5d9ck/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly90aGVt/ZXdhZ29uLmNvbS93/cC1jb250ZW50L3Vw/bG9hZHMvMjAxOC8w/Ny9Tb3V0aC1mcmVl/LXJlYWwtZXN0YXRl/LXdlYnNpdGUtdGVt/cGxhdGUtMS5qcGc" alt="" srcset="">
                         <div class="portfolio-overlay">
                             <h3>Real Estate Portal</h3>
                             <p>Property Listing</p>
@@ -135,16 +140,17 @@
 
                 <!-- Project 6 -->
                 <div class="portfolio-item">
-                    <div class="portfolio-image" style="background: linear-gradient(135deg, #30cfd0 0%, #330867 100%);">
+                    <div class="portfolio-image">
+                        <img src="https://imgs.search.brave.com/MXrFEYco3j4TRs9EcalPytzdvYdpQWx63n9W44QU3AI/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly93d3cu/Zm91bmRlcmphci5j/b20vd3AtY29udGVu/dC91cGxvYWRzLzIw/MjQvMDIvMS4tTWFu/Z28tTWFya2V0aW5n/LUNvLi1CZXN0LVNs/ZWVrLVdlYnNpdGUt/RGVzaWduLUV4YW1w/bGVzLmpwZWc" alt="" srcset="">
                         <div class="portfolio-overlay">
-                            <h3>Personal Portfolio</h3>
-                            <p>Creative Design</p>
+                            <h3>Marketing Website</h3>
+                            <p>Marzender</p>
                         </div>
                     </div>
                     <div class="portfolio-details">
-                        <h3>John Doe Portfolio</h3>
+                        <h3>Marzender</h3>
                         <p class="project-category">Static Website</p>
-                        <p class="project-description">Elegant portfolio website for a freelance photographer with gallery and testimonials.</p>
+                        <p class="project-description">A static site for a marketing agency.</p>
                         <ul class="tech-stack">
                             <li>HTML5</li>
                             <li>CSS3</li>
