--- a/privacy.html
+++ b/privacy.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Web Designing Agency</title>
+    <title>Privacy Policy - Webmasters</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/privacy_policy.css">
 </head>
 <body>
     <div class="header">
         <div class="container">
-                <div class="logo"><a href="index.html" style="color: #2c3e50; text-decoration: none;">Web Designing Agency</a></div>
+                <div class="logo"><a href="index.html" style="color: #2c3e50; text-decoration: none;">Webmasters</a></div>
             <div class="nav">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="services.html" class="nav-link">Services</a>
@@ -29,7 +29,7 @@
 
             <div class="policy-content">
                 <h2>1. Introduction</h2>
-                <p>Welcome to Web Designing Agency ("we," "our," or "us"). We are committed to protecting your personal information and your right to privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website or use our services.</p>
+                <p>Welcome to Webmasters ("we," "our," or "us"). We are committed to protecting your personal information and your right to privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website or use our services.</p>
 
                 <h2>2. Information We Collect</h2>
                 <h3>2.1 Personal Information</h3>
@@ -143,7 +143,7 @@
                 <a href="terms.html">Terms of Service</a> | 
                 <a href="contact.html">Contact Us</a>
             </div>
-            <p>© <span id="year"></span> Web Designing Agency. All Rights Reserved.</p>
+            <p>© <span id="year"></span> Webmasters. All Rights Reserved.</p>
         </div>
     </div>
 
