--- a/terms.html
+++ b/terms.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - Web Designing Agency</title>
+    <title>Terms of Service - Webmasters</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/privacy_policy.css">
 </head>
 <body>
     <div class="header">
         <div class="container">
-                <div class="logo"><a href="index.html" style="color: #2c3e50; text-decoration: none;">Web Designing Agency</a></div>
+                <div class="logo"><a href="index.html" style="color: #2c3e50; text-decoration: none;">Webmasters</a></div>
             <div class="nav">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="services.html" class="nav-link">Services</a>
@@ -29,10 +29,10 @@
 
             <div class="policy-content">
                 <h2>1. Agreement to Terms</h2>
-                <p>By accessing and using the services of Web Designing Agency ("Company," "we," "our," or "us"), you agree to be bound by these Terms of Service ("Terms"). If you do not agree to these Terms, please do not use our services.</p>
+                <p>By accessing and using the services of Webmasters ("Company," "we," "our," or "us"), you agree to be bound by these Terms of Service ("Terms"). If you do not agree to these Terms, please do not use our services.</p>
 
                 <h2>2. Services</h2>
-                <p>Web Designing Agency provides web development, design, and related digital services including but not limited to:</p>
+                <p>Webmasters provides web development, design, and related digital services including but not limited to:</p>
                 <ul>
                     <li>Static website development</li>
                     <li>Dynamic website development</li>
@@ -128,7 +128,7 @@
                 </ul>
 
                 <h2>9. Limitation of Liability</h2>
-                <p>To the maximum extent permitted by law, Web Designing Agency shall not be liable for:</p>
+                <p>To the maximum extent permitted by law, Webmasters shall not be liable for:</p>
                 <ul>
                     <li>Indirect, incidental, or consequential damages</li>
                     <li>Loss of profits, data, or business opportunities</li>
@@ -229,7 +229,7 @@
                 <a href="terms.html">Terms of Service</a> | 
                 <a href="contact.html">Contact Us</a>
             </div>
-            <p>© <span id="year"></span> Web Designing Agency. All Rights Reserved.</p>
+            <p>© <span id="year"></span> Webmasters. All Rights Reserved.</p>
         </div>
     </div>
 
