--- a/faq.html
+++ b/faq.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ - Web Designing Agency</title>
+    <title>FAQ - Webmasters</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/faq.css">
 </head>
 <body>
     <div class="header">
         <div class="container">
-                <div class="logo"><a href="index.html" style="color: #2c3e50; text-decoration: none;">Web Designing Agency</a></div>
+                <div class="logo"><a href="index.html" style="color: #2c3e50; text-decoration: none;">Webmasters</a></div>
             <div class="nav">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="services.html" class="nav-link">Services</a>
@@ -230,7 +230,7 @@
                 <a href="terms.html">Terms of Service</a> | 
                 <a href="contact.html">Contact Us</a>
             </div>
-            <p>© <span id="year"></span> Web Designing Agency. All Rights Reserved.</p>
+            <p>© <span id="year"></span> Webmasters. All Rights Reserved.</p>
         </div>
     </div>
 
