--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
         <div class="container">
-                <div class="logo"><a href="index" style="color: #2c3e50; text-decoration: none;">Webmasters</a></div>
+                <div class="logo"><a href="index.html" style="color: #2c3e50; text-decoration: none;">Webmasters</a></div>
             <div class="nav">
                 <a href="index.html" class="nav-link active">Home</a>
                 <a href="services.html" class="nav-link">Services</a>
@@ -37,12 +37,34 @@
     <div class="footer">
         <div class="container">
             <div class="footer-links">
-                <a href="privacy">Privacy Policy</a> | 
-                <a href="terms">Terms of Service</a> | 
-                <a href="contact">Contact Us</a>
+                <a href="privacy.html">Privacy Policy</a> | 
+                <a href="terms.html">Terms of Service</a> | 
+                <a href="contact.html">Contact Us</a>
             </div>
             <p>© 2025 Webmasters. All Rights Reserved.</p>
         </div>
     </div>
+
+    <!-- Page loader - last element so it renders on top -->
+    <div id="page-loader" aria-hidden="true">
+        <video id="loader-video" src="./video.mp4" muted autoplay playsinline preload="auto"></video>
+    </div>
+
+    <script>
+    (function () {
+        var loader = document.getElementById('page-loader');
+        var header = document.getElementsByClassName('header')[0];
+
+        function hideLoader() {
+            loader.classList.add('hidden');
+            setTimeout(function() {
+                loader.style.display = 'none';
+            }, 800);
+            header.style.zIndex = 1000; // bring the header above the other elements so that links are clickable
+        }
+
+        setTimeout(hideLoader, 16000);
+    })();
+    </script>
 </body>
 </html>
