--- a/testimonials.html
+++ b/testimonials.html
@@ -31,7 +31,7 @@
             <div class="testimonial-grid">
                 <!-- Testimonial 1 -->
                 <div class="testimonial-card">
-                    <div class="testimonial-rating">⭐⭐⭐⭐⭐</div>
+                    <div class="testimonial-rating">⭐⭐⭐⭐</div>
                     <p class="testimonial-text">"Working with this agency was an absolute pleasure! They delivered our e-commerce website ahead of schedule and exceeded all our expectations. The attention to detail and professional communication throughout the project was outstanding."</p>
                     <div class="testimonial-author">
                         <div class="author-avatar" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">RK</div>
@@ -83,7 +83,7 @@
 
                 <!-- Testimonial 5 -->
                 <div class="testimonial-card">
-                    <div class="testimonial-rating">⭐⭐⭐⭐⭐</div>
+                    <div class="testimonial-rating">⭐⭐⭐⭐</div>
                     <p class="testimonial-text">"The real estate portal they developed for us is fantastic! Property listings are easy to manage, and our agents love the CRM integration. It's increased our lead conversions by 40%."</p>
                     <div class="testimonial-author">
                         <div class="author-avatar" style="background: linear-gradient(135deg, #fa709a 0%, #fee140 100%);">VG</div>
@@ -122,7 +122,7 @@
 
                 <!-- Testimonial 8 -->
                 <div class="testimonial-card">
-                    <div class="testimonial-rating">⭐⭐⭐⭐⭐</div>
+                    <div class="testimonial-rating">⭐⭐⭐⭐</div>
                     <p class="testimonial-text">"Their full-stack solution with hosting support has been worry-free. Regular updates, security patches, and excellent uptime. Worth every rupee!"</p>
                     <div class="testimonial-author">
                         <div class="author-avatar" style="background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 100%);">MS</div>
