--- a/contact.html
+++ b/contact.html
@@ -51,13 +51,13 @@
                             <label for="service">Service Interested In <span style="color: red;">*</span></label>
                             <select id="service" name="service" required>
                                 <option value="">Select a service</option>
-                                <option value="static">Static Website</option>
-                                <option value="dynamic">Dynamic Website</option>
-                                <option value="fullstack">Full-Stack + Hosting</option>
-                                <option value="redesign">Website Redesign</option>
-                                <option value="maintenance">Maintenance & Support</option>
-                                <option value="seo">SEO Optimization</option>
-                                <option value="other">Other</option>
+                                <option value="Static Website">Static Website</option>
+                                <option value="Dynamic Website">Dynamic Website</option>
+                                <option value="Full-Stack + Hosting">Full-Stack + Hosting</option>
+                                <option value="Website Redesign">Website Redesign</option>
+                                <option value="Maintenance & Support">Maintenance & Support</option>
+                                <option value="SEO Optimization">SEO Optimization</option>
+                                <option value="Other">Other</option>
                             </select>
                         </div>
 
@@ -65,11 +65,11 @@
                             <label for="budget">Budget Range</label>
                             <select id="budget" name="budget">
                                 <option value="">Select budget range</option>
-                                <option value="15k-35k">₹15,000 - ₹35,000</option>
-                                <option value="35k-75k">₹35,000 - ₹75,000</option>
-                                <option value="75k-150k">₹75,000 - ₹1,50,000</option>
-                                <option value="150k-300k">₹1,50,000 - ₹3,00,000</option>
-                                <option value="300k+">₹3,00,000+</option>
+                                <option value="₹15,000 - ₹35,000">₹15,000 - ₹35,000</option>
+                                <option value="₹35,000 - ₹75,000">₹35,000 - ₹75,000</option>
+                                <option value="₹75,000 - ₹1,50,000">₹75,000 - ₹1,50,000</option>
+                                <option value="₹1,50,000 - ₹3,00,000">₹1,50,000 - ₹3,00,000</option>
+                                <option value="₹3,00,000+">₹3,00,000+</option>
                             </select>
                         </div>
 
@@ -77,10 +77,10 @@
                             <label for="timeline">Expected Timeline</label>
                             <select id="timeline" name="timeline">
                                 <option value="">Select timeline</option>
-                                <option value="urgent">Urgent (1-2 weeks)</option>
-                                <option value="normal">Normal (1-2 months)</option>
-                                <option value="flexible">Flexible (2-3 months)</option>
-                                <option value="planning">Just Planning</option>
+                                <option value="Urgent (1-2 weeks)">Urgent (1-2 weeks)</option>
+                                <option value="Normal (1-2 months)">Normal (1-2 months)</option>
+                                <option value="Flexible (2-3 months)">Flexible (2-3 months)</option>
+                                <option value="Just Planning">Just Planning</option>
                             </select>
                         </div>
 
